--- a/.bumpversion.cfg
+++ b/.bumpversion.cfg
@@ -5,7 +5,7 @@ tag = True
 parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
 serialize = {major}.{minor}.{patch}
 
-[bumpversion:file:./package.json]
+[bumpversion:file:./nautapy/__about__.py]
 
 [bumpversion:file:./README.md]
 
